--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
-name = "test-http-server"
-version = "0.1.0"
+name = "redirect-server"
+version = "1.0.0"
 edition = "2024"
 
 [dependencies]
